DAS-2397: parallelize smap test
Just submit all of the requests before beginning to verify them so they can all
finish faster.

--- a/test/nsidc-smap/nsidc-smap_Regression.ipynb
+++ b/test/nsidc-smap/nsidc-smap_Regression.ipynb
@@ -100,7 +100,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from os.path import exists\n",
     "from pathlib import Path\n",
     "from tempfile import TemporaryDirectory\n",
     "import json\n",
@@ -129,7 +128,7 @@
     "import sys\n",
     "\n",
     "sys.path.append(\"../shared_utils\")\n",
-    "from utilities import print_success, submit_and_download\n",
+    "from utilities import print_success\n",
     "from smap_utils import (\n",
     "    file_for_variable,\n",
     "    comparison_function_by_extension,\n",
@@ -223,53 +222,61 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e745045b-10fc-4e6c-808c-3bdaf2725d03",
+   "id": "bb82cf89-669f-4b30-a622-86e00427d36d",
    "metadata": {},
    "outputs": [],
    "source": [
     "if configuration is not None:\n",
+    "    requests = []\n",
+    "    tmp_dir = TemporaryDirectory()\n",
+    "\n",
+    "    # Submit all of the requests to Harmony\n",
     "    for test_name, test_configs in configuration[\"single_output_tests\"].items():\n",
-    "        print(f\"Running Tests: {test_name}\")\n",
+    "        for shortname, test_config in test_configs.items():\n",
+    "            print(f'Submitting Request: {test_name}:{shortname}')\n",
     "\n",
-    "        with TemporaryDirectory() as tmp_dir:\n",
+    "            test_request = Request(**test_config[\"request_params\"])\n",
+    "            ext = test_config[\"test_params\"][\"ext\"]\n",
+    "            test_job_id = harmony_client.submit(test_request)\n",
     "\n",
-    "            for shortname, test_config in test_configs.items():\n",
-    "                print(f\"running request: {shortname}\")\n",
+    "            requests.append(\n",
+    "                {\n",
+    "                    'shortname': shortname,\n",
+    "                    'test_name': test_name,\n",
+    "                    'ext': ext,\n",
+    "                    'test_job_id': test_job_id,\n",
+    "                }\n",
+    "            )\n",
     "\n",
-    "                test_request = Request(**test_config[\"request_params\"])\n",
-    "                ext = test_config[\"test_params\"][\"ext\"]\n",
-    "                test_output = tmp_dir / Path(f\"{shortname}_{test_name}{ext}\")\n",
-    "                test_reference = Path(\n",
-    "                    f\"reference_files/{test_output.stem}_reference.json\"\n",
-    "                )\n",
+    "    # Verify all of the test results\n",
+    "    for request in requests:\n",
+    "        ext = request['ext']\n",
+    "        shortname = request['shortname']\n",
+    "        test_name = request['test_name']\n",
+    "        test_output = tmp_dir.name / Path(f\"{shortname}_{test_name}{ext}\")\n",
     "\n",
-    "                submit_and_download(harmony_client, test_request, test_output)\n",
+    "        for filename in [\n",
+    "            file_future.result()\n",
+    "            for file_future in harmony_client.download_all(\n",
+    "                request['test_job_id'], overwrite=True\n",
+    "            )\n",
+    "        ]:\n",
+    "            Path(filename).replace(test_output)\n",
+    "            print(f'Downloaded: {test_output}')\n",
     "\n",
-    "                assert exists(\n",
-    "                    test_output\n",
-    "                ), f\"Unsuccessful Harmony Request: {shortname}: {test_name}\"\n",
+    "        compare_fxn = comparison_function_by_extension(ext)\n",
+    "        excluded_metadata = exclusions_by_extension(ext)\n",
     "\n",
-    "                # Grab correct comparison function and call it.\n",
-    "                compare_fxn = comparison_function_by_extension(ext)\n",
-    "                excluded_metadata = exclusions_by_extension(ext)\n",
+    "        reference_file = Path(\"reference_files\") / f\"{test_output.stem}_reference.json\"\n",
+    "        print(f\"assert: {compare_fxn.__name__}({test_output.name}, {reference_file}) \")\n",
+    "        assert compare_fxn(\n",
+    "            test_output, reference_file, **excluded_metadata\n",
+    "        ), f\"Failed comparison for {shortname}:{test_name}\"\n",
     "\n",
-    "                reference_file = (\n",
-    "                    Path(\"reference_files\") / f\"{test_output.stem}_reference.json\"\n",
-    "                )\n",
-    "                print(\n",
-    "                    f\"assert: {compare_fxn.__name__}({test_output.name}, {reference_file}) \"\n",
-    "                )\n",
-    "                assert compare_fxn(\n",
-    "                    test_output, reference_file, **excluded_metadata\n",
-    "                ), f'Failed comparison for {shortname}:{test_name}'\n",
+    "        print_success(f\"{test_name}:{shortname} Test.\")\n",
     "\n",
-    "                print_success(f\"{shortname} {test_name} test request complete.\")\n",
-    "        print_success(f\"{test_name} test suite complete.\")\n",
-    "    print_success(\"Entire SMAP Single Output Regression Test suite complete.\")\n",
-    "else:\n",
-    "    print(\n",
-    "        f'Bounding box tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
-    "    )"
+    "    print_success('Entire Single Output Test Suite.')\n",
+    "    tmp_dir.cleanup()"
    ]
   },
   {
