DAS-2397: Parallelize nsidc-icesat2 tests

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -127,7 +127,7 @@
     "import sys\n",
     "\n",
     "sys.path.append('../shared_utils')\n",
-    "from utilities import print_success, submit_and_download"
+    "from utilities import print_success"
    ]
   },
   {
@@ -380,43 +380,65 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e745045b-10fc-4e6c-808c-3bdaf2725d03",
+   "id": "e214fc82-cb0d-455b-8736-97827382a0cb",
    "metadata": {},
    "outputs": [],
    "source": [
     "test_name = 'subset_bounding_box'\n",
+    "if configuration is not None:\n",
+    "    requests = []\n",
+    "    tmp_dir = TemporaryDirectory()\n",
+    "    for shortname, test_config in configuration[test_name].items():\n",
+    "        test_request = Request(\n",
+    "            collection=test_config['collection_concept_id'],\n",
+    "            granule_id=[test_config['granule_id']],\n",
+    "            spatial=test_config['spatial'],\n",
+    "            labels=[f'IS2-rtest-{shortname}', 'IS2-rtest'],\n",
+    "        )\n",
+    "        print(f'Submitting request: {test_name}:{shortname}')\n",
+    "        test_job_id = harmony_client.submit(test_request)\n",
+    "        requests.append(\n",
+    "            {\n",
+    "                'shortname': shortname,\n",
+    "                'test_name': test_name,\n",
+    "                'test_job_id': test_job_id,\n",
+    "            }\n",
+    "        )\n",
     "\n",
-    "with TemporaryDirectory() as tmp_dir:\n",
-    "    if configuration is not None:\n",
-    "        for shortname, test_config in configuration[test_name].items():\n",
-    "            test_request = Request(\n",
-    "                collection=test_config['collection_concept_id'],\n",
-    "                granule_id=[test_config['granule_id']],\n",
-    "                spatial=test_config['spatial'],\n",
-    "                labels=[f'IS2-rtest-{shortname}', 'IS2-rtest'],\n",
+    "    for req in requests:\n",
+    "        shortname = req['shortname']\n",
+    "        test_name = req['test_name']\n",
+    "\n",
+    "        test_output = tmp_dir.name / Path(f'{shortname}_{test_name}.h5')\n",
+    "        test_reference = Path(f'reference_files/{test_output.stem}_reference.json')\n",
+    "\n",
+    "        for filename in [\n",
+    "            file_future.result()\n",
+    "            for file_future in harmony_client.download_all(\n",
+    "                req['test_job_id'], overwrite=True\n",
     "            )\n",
-    "            test_output = tmp_dir / Path(f'{shortname}_{test_name}.h5')\n",
-    "            test_reference = Path(f'reference_files/{test_output.stem}_reference.json')\n",
+    "        ]:\n",
+    "            Path(filename).replace(test_output)\n",
+    "            print(f'Downloaded: {test_output}')\n",
     "\n",
-    "            submit_and_download(harmony_client, test_request, test_output)\n",
+    "        assert exists(\n",
+    "            test_output\n",
+    "        ), f'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
     "\n",
-    "            assert exists(\n",
-    "                test_output\n",
-    "            ), f'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
+    "        assert h5_matches_reference_hash_file(\n",
+    "            test_output,\n",
+    "            test_reference,\n",
+    "            skipped_metadata_attributes={'Processing Parameters'},\n",
+    "        ), f'Test output does not match reference file: {shortname}: {test_name}'\n",
     "\n",
-    "            assert h5_matches_reference_hash_file(\n",
-    "                test_output,\n",
-    "                test_reference,\n",
-    "                skipped_metadata_attributes={'Processing Parameters'},\n",
-    "            ), f'Test output does not match reference file: {shortname}: {test_name}'\n",
+    "        print_success(f'{shortname} {test_name} test request complete.')\n",
     "\n",
-    "            print_success(f'{shortname} {test_name} test request complete.')\n",
-    "\n",
-    "        print_success(f'{test_name} test suite complete.')\n",
-    "    else:\n",
-    "        print(\n",
-    "            f'Bounding box tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
-    "        )"
+    "    print_success(f'{test_name} test suite complete.')\n",
+    "    tmp_dir.cleanup()\n",
+    "else:\n",
+    "    print(\n",
+    "        f'Bounding box tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
+    "    )"
    ]
   },
   {
@@ -440,43 +462,66 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20ab50f4-c142-4733-858e-b4fba1053386",
+   "id": "5b0fd4a3-4410-4046-9df2-96f5e27e2548",
    "metadata": {},
    "outputs": [],
    "source": [
     "test_name = 'subset_by_temporal_range'\n",
+    "if configuration is not None:\n",
+    "    requests = []\n",
+    "    tmp_dir = TemporaryDirectory()\n",
+    "    for shortname, test_config in configuration[test_name].items():\n",
+    "        test_request = Request(\n",
+    "            collection=test_config['collection_concept_id'],\n",
+    "            granule_id=[test_config['granule_id']],\n",
+    "            temporal=test_config['temporal'],\n",
+    "            labels=[f'IS2-rtest-{shortname}', 'IS2-rtest'],\n",
+    "        )\n",
     "\n",
-    "with TemporaryDirectory() as tmp_dir:\n",
-    "    if configuration is not None:\n",
-    "        for shortname, test_config in configuration[test_name].items():\n",
-    "            test_request = Request(\n",
-    "                collection=test_config['collection_concept_id'],\n",
-    "                granule_id=[test_config['granule_id']],\n",
-    "                temporal=test_config['temporal'],\n",
-    "                labels=[f'IS2-rtest-{shortname}', 'IS2-rtest'],\n",
+    "        print(f'Submitting request: {test_name}:{shortname}')\n",
+    "        test_job_id = harmony_client.submit(test_request)\n",
+    "        requests.append(\n",
+    "            {\n",
+    "                'shortname': shortname,\n",
+    "                'test_name': test_name,\n",
+    "                'test_job_id': test_job_id,\n",
+    "            }\n",
+    "        )\n",
+    "\n",
+    "    for req in requests:\n",
+    "        shortname = req['shortname']\n",
+    "        test_name = req['test_name']\n",
+    "\n",
+    "        test_output = tmp_dir.name / Path(f'{shortname}_{test_name}.h5')\n",
+    "        test_reference = Path(f'reference_files/{test_output.stem}_reference.json')\n",
+    "\n",
+    "        for filename in [\n",
+    "            file_future.result()\n",
+    "            for file_future in harmony_client.download_all(\n",
+    "                req['test_job_id'], overwrite=True\n",
     "            )\n",
-    "            test_output = tmp_dir / Path(f'{shortname}_{test_name}.h5')\n",
-    "            test_reference = Path(f'reference_files/{test_output.stem}_reference.json')\n",
+    "        ]:\n",
+    "            Path(filename).replace(test_output)\n",
+    "            print(f'Downloaded: {test_output}')\n",
     "\n",
-    "            submit_and_download(harmony_client, test_request, test_output)\n",
+    "        assert exists(\n",
+    "            test_output\n",
+    "        ), f'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
     "\n",
-    "            assert exists(\n",
-    "                test_output\n",
-    "            ), f'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
+    "        assert h5_matches_reference_hash_file(\n",
+    "            test_output,\n",
+    "            test_reference,\n",
+    "            skipped_metadata_attributes={'Processing Parameters'},\n",
+    "        ), f'Test output does not match reference file: {shortname}: {test_name}'\n",
     "\n",
-    "            assert h5_matches_reference_hash_file(\n",
-    "                test_output,\n",
-    "                test_reference,\n",
-    "                skipped_metadata_attributes={'Processing Parameters'},\n",
-    "            ), f'Test output does not match reference file: {shortname}: {test_name}'\n",
+    "        print_success(f'{shortname} {test_name} test request complete.')\n",
     "\n",
-    "            print_success(f'{shortname} {test_name} test request complete.')\n",
-    "\n",
-    "        print_success(f'{test_name} test suite complete.')\n",
-    "    else:\n",
-    "        print(\n",
-    "            f'Temporal range tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
-    "        )"
+    "    print_success(f'{test_name} test suite complete.')\n",
+    "    tmp_dir.cleanup()\n",
+    "else:\n",
+    "    print(\n",
+    "        f'Temporal range tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
+    "    )"
    ]
   },
   {
@@ -500,43 +545,66 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e91d4136-74c4-4bbc-8217-44a27296d196",
+   "id": "3cf0ad2e-b28b-4744-a47d-5a6ea492e9b1",
    "metadata": {},
    "outputs": [],
    "source": [
     "test_name = 'subset_by_shapefile'\n",
+    "if configuration is not None:\n",
+    "    tmp_dir = TemporaryDirectory()\n",
+    "    requests = []\n",
+    "    for shortname, test_config in configuration[test_name].items():\n",
+    "        test_request = Request(\n",
+    "            collection=test_config['collection_concept_id'],\n",
+    "            granule_id=[test_config['granule_id']],\n",
+    "            shape=test_config['shape'],\n",
+    "            labels=[f'IS2-rtest-{shortname}', 'IS2-rtest'],\n",
+    "        )\n",
     "\n",
-    "with TemporaryDirectory() as tmp_dir:\n",
-    "    if configuration is not None:\n",
-    "        for shortname, test_config in configuration[test_name].items():\n",
-    "            test_request = Request(\n",
-    "                collection=test_config['collection_concept_id'],\n",
-    "                granule_id=[test_config['granule_id']],\n",
-    "                shape=test_config['shape'],\n",
-    "                labels=[f'IS2-rtest-{shortname}', 'IS2-rtest'],\n",
+    "        print(f'Submitting request: {test_name}:{shortname}')\n",
+    "        test_job_id = harmony_client.submit(test_request)\n",
+    "        requests.append(\n",
+    "            {\n",
+    "                'shortname': shortname,\n",
+    "                'test_name': test_name,\n",
+    "                'test_job_id': test_job_id,\n",
+    "            }\n",
+    "        )\n",
+    "\n",
+    "    for req in requests:\n",
+    "        shortname = req['shortname']\n",
+    "        test_name = req['test_name']\n",
+    "\n",
+    "        test_output = tmp_dir.name / Path(f'{shortname}_{test_name}.h5')\n",
+    "        test_reference = Path(f'reference_files/{test_output.stem}_reference.json')\n",
+    "\n",
+    "        for filename in [\n",
+    "            file_future.result()\n",
+    "            for file_future in harmony_client.download_all(\n",
+    "                req['test_job_id'], overwrite=True\n",
     "            )\n",
-    "            test_output = tmp_dir / Path(f'{shortname}_{test_name}.h5')\n",
-    "            test_reference = Path(f'reference_files/{test_output.stem}_reference.json')\n",
+    "        ]:\n",
+    "            Path(filename).replace(test_output)\n",
+    "            print(f'Downloaded: {test_output}')\n",
     "\n",
-    "            submit_and_download(harmony_client, test_request, test_output)\n",
+    "        assert exists(\n",
+    "            test_output\n",
+    "        ), f'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
     "\n",
-    "            assert exists(\n",
-    "                test_output\n",
-    "            ), f'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
+    "        assert h5_matches_reference_hash_file(\n",
+    "            test_output,\n",
+    "            test_reference,\n",
+    "            skipped_metadata_attributes={'Processing Parameters'},\n",
+    "        ), f'Test output does not match reference file: {shortname}: {test_name}'\n",
     "\n",
-    "            assert h5_matches_reference_hash_file(\n",
-    "                test_output,\n",
-    "                test_reference,\n",
-    "                skipped_metadata_attributes={'Processing Parameters'},\n",
-    "            ), f'Test output does not match reference file: {shortname}: {test_name}'\n",
+    "        print_success(f'{shortname} {test_name} test request complete.')\n",
     "\n",
-    "            print_success(f'{shortname} {test_name} test request complete.')\n",
-    "\n",
-    "        print_success(f'{test_name} test suite complete.')\n",
-    "    else:\n",
-    "        print(\n",
-    "            f'Shapefile tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
-    "        )"
+    "    print_success(f'{test_name} test suite complete.')\n",
+    "    tmp_dir.cleanup()\n",
+    "else:\n",
+    "    print(\n",
+    "        f'Shapefile tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
+    "    )"
    ]
   }
  ],
