DAS-2397: Fix no configuration output

--- a/test/nsidc-smap/nsidc-smap_Regression.ipynb
+++ b/test/nsidc-smap/nsidc-smap_Regression.ipynb
@@ -276,7 +276,9 @@
     "        print_success(f\"{test_name}:{shortname} Test.\")\n",
     "\n",
     "    print_success('Entire Single Output Test Suite.')\n",
-    "    tmp_dir.cleanup()"
+    "    tmp_dir.cleanup()\n",
+    "else:\n",
+    "    print('Single Ouput Tests not configured - skipping tests')"
    ]
   },
   {
@@ -341,9 +343,7 @@
     "        print_success(f\"{test_name} test suite complete.\")\n",
     "    print_success(\"muliple_output_test: SMAP Regression Test suite complete.\")\n",
     "else:\n",
-    "    print(\n",
-    "        f'Bounding box tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
-    "    )"
+    "    print('Multiple Output Tests not configured - skipping tests')"
    ]
   }
  ],
