DAS-2397: Adds download_file_from_harmony to shared_utility

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -127,7 +127,7 @@
     "import sys\n",
     "\n",
     "sys.path.append('../shared_utils')\n",
-    "from utilities import print_success"
+    "from utilities import print_success, download_file_from_harmony"
    ]
   },
   {
@@ -412,14 +412,9 @@
     "        test_output = tmp_dir.name / Path(f'{shortname}_{test_name}.h5')\n",
     "        test_reference = Path(f'reference_files/{test_output.stem}_reference.json')\n",
     "\n",
-    "        for filename in [\n",
-    "            file_future.result()\n",
-    "            for file_future in harmony_client.download_all(\n",
-    "                req['test_job_id'], overwrite=True\n",
-    "            )\n",
-    "        ]:\n",
-    "            Path(filename).replace(test_output)\n",
-    "            print(f'Downloaded: {test_output}')\n",
+    "        download_file_from_harmony(\n",
+    "            harmony_client, req['test_job_id'], test_output, tmp_dir.name\n",
+    "        )\n",
     "\n",
     "        assert exists(\n",
     "            test_output\n",
@@ -495,14 +490,9 @@
     "        test_output = tmp_dir.name / Path(f'{shortname}_{test_name}.h5')\n",
     "        test_reference = Path(f'reference_files/{test_output.stem}_reference.json')\n",
     "\n",
-    "        for filename in [\n",
-    "            file_future.result()\n",
-    "            for file_future in harmony_client.download_all(\n",
-    "                req['test_job_id'], overwrite=True\n",
-    "            )\n",
-    "        ]:\n",
-    "            Path(filename).replace(test_output)\n",
-    "            print(f'Downloaded: {test_output}')\n",
+    "        download_file_from_harmony(\n",
+    "            harmony_client, req['test_job_id'], test_output, tmp_dir.name\n",
+    "        )\n",
     "\n",
     "        assert exists(\n",
     "            test_output\n",
@@ -578,14 +568,9 @@
     "        test_output = tmp_dir.name / Path(f'{shortname}_{test_name}.h5')\n",
     "        test_reference = Path(f'reference_files/{test_output.stem}_reference.json')\n",
     "\n",
-    "        for filename in [\n",
-    "            file_future.result()\n",
-    "            for file_future in harmony_client.download_all(\n",
-    "                req['test_job_id'], overwrite=True\n",
-    "            )\n",
-    "        ]:\n",
-    "            Path(filename).replace(test_output)\n",
-    "            print(f'Downloaded: {test_output}')\n",
+    "        download_file_from_harmony(\n",
+    "            harmony_client, req['test_job_id'], test_output, tmp_dir.name\n",
+    "        )\n",
     "\n",
     "        assert exists(\n",
     "            test_output\n",
