--- a/test/nsidc-smap/nsidc-smap_Regression.ipynb
+++ b/test/nsidc-smap/nsidc-smap_Regression.ipynb
@@ -128,7 +128,7 @@
     "import sys\n",
     "\n",
     "sys.path.append(\"../shared_utils\")\n",
-    "from utilities import print_success\n",
+    "from utilities import print_success, download_file_from_harmony\n",
     "from smap_utils import (\n",
     "    file_for_variable,\n",
     "    comparison_function_by_extension,\n",
@@ -249,20 +249,13 @@
     "            )\n",
     "\n",
     "    # Verify all of the test results\n",
-    "    for request in requests:\n",
-    "        ext = request['ext']\n",
-    "        shortname = request['shortname']\n",
-    "        test_name = request['test_name']\n",
+    "    for req in requests:\n",
+    "        ext = req['ext']\n",
+    "        shortname = req['shortname']\n",
+    "        test_name = req['test_name']\n",
     "        test_output = tmp_dir.name / Path(f\"{shortname}_{test_name}{ext}\")\n",
     "\n",
-    "        for filename in [\n",
-    "            file_future.result()\n",
-    "            for file_future in harmony_client.download_all(\n",
-    "                request['test_job_id'], overwrite=True\n",
-    "            )\n",
-    "        ]:\n",
-    "            Path(filename).replace(test_output)\n",
-    "            print(f'Downloaded: {test_output}')\n",
+    "        download_file_from_harmony(harmony_client, req['test_job_id'], test_output)\n",
     "\n",
     "        compare_fxn = comparison_function_by_extension(ext)\n",
     "        excluded_metadata = exclusions_by_extension(ext)\n",
