DAS-2397: Fix markdown cells describing the tests.
remove errant comment marker.

--- a/test/nsidc-smap/nsidc-smap_Regression.ipynb
+++ b/test/nsidc-smap/nsidc-smap_Regression.ipynb
@@ -211,9 +211,8 @@
     "\n",
     "- subset_bounding_box: SPL2SMA, SPL3FTP_E\n",
     "- subset_by_geojson: SPL2SMA\n",
-    "- subset_by_geojson: SPL2SMA\n",
     "- subset_by_shapefile: SPL3FTP\n",
-    "- subset_by_variable: SPL2SMP_E, SPL2SMP_E_2\n",
+    "- subset_by_variable: SPL2SMP_E, SPL3SMA\n",
     "- subset_by_kml: SPL3SMP\n",
     "- reprojection_to_geographic: SPL4CMDL\n",
     "            \n",
