DAS-2397: rename requests list test_requests

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -386,7 +386,7 @@
    "source": [
     "test_name = 'subset_bounding_box'\n",
     "if configuration is not None:\n",
-    "    requests = []\n",
+    "    test_requests = []\n",
     "    tmp_dir = TemporaryDirectory()\n",
     "    for shortname, test_config in configuration[test_name].items():\n",
     "        test_request = Request(\n",
@@ -397,7 +397,7 @@
     "        )\n",
     "        print(f'Submitting request: {test_name}:{shortname}')\n",
     "        test_job_id = harmony_client.submit(test_request)\n",
-    "        requests.append(\n",
+    "        test_requests.append(\n",
     "            {\n",
     "                'shortname': shortname,\n",
     "                'test_name': test_name,\n",
@@ -405,7 +405,7 @@
     "            }\n",
     "        )\n",
     "\n",
-    "    for req in requests:\n",
+    "    for req in test_requests:\n",
     "        shortname = req['shortname']\n",
     "        test_name = req['test_name']\n",
     "\n",
@@ -463,7 +463,7 @@
    "source": [
     "test_name = 'subset_by_temporal_range'\n",
     "if configuration is not None:\n",
-    "    requests = []\n",
+    "    test_requests = []\n",
     "    tmp_dir = TemporaryDirectory()\n",
     "    for shortname, test_config in configuration[test_name].items():\n",
     "        test_request = Request(\n",
@@ -475,7 +475,7 @@
     "\n",
     "        print(f'Submitting request: {test_name}:{shortname}')\n",
     "        test_job_id = harmony_client.submit(test_request)\n",
-    "        requests.append(\n",
+    "        test_requests.append(\n",
     "            {\n",
     "                'shortname': shortname,\n",
     "                'test_name': test_name,\n",
@@ -483,7 +483,7 @@
     "            }\n",
     "        )\n",
     "\n",
-    "    for req in requests:\n",
+    "    for req in test_requests:\n",
     "        shortname = req['shortname']\n",
     "        test_name = req['test_name']\n",
     "\n",
@@ -542,7 +542,7 @@
     "test_name = 'subset_by_shapefile'\n",
     "if configuration is not None:\n",
     "    tmp_dir = TemporaryDirectory()\n",
-    "    requests = []\n",
+    "    test_requests = []\n",
     "    for shortname, test_config in configuration[test_name].items():\n",
     "        test_request = Request(\n",
     "            collection=test_config['collection_concept_id'],\n",
@@ -553,7 +553,7 @@
     "\n",
     "        print(f'Submitting request: {test_name}:{shortname}')\n",
     "        test_job_id = harmony_client.submit(test_request)\n",
-    "        requests.append(\n",
+    "        test_requests.append(\n",
     "            {\n",
     "                'shortname': shortname,\n",
     "                'test_name': test_name,\n",
@@ -561,7 +561,7 @@
     "            }\n",
     "        )\n",
     "\n",
-    "    for req in requests:\n",
+    "    for req in test_requests:\n",
     "        shortname = req['shortname']\n",
     "        test_name = req['test_name']\n",
     "\n",
