--- a/test/nsidc-smap/nsidc-smap_Regression.ipynb
+++ b/test/nsidc-smap/nsidc-smap_Regression.ipynb
@@ -226,10 +226,10 @@
    "outputs": [],
    "source": [
     "if configuration is not None:\n",
-    "    requests = []\n",
+    "    test_requests = []\n",
     "    tmp_dir = TemporaryDirectory()\n",
     "\n",
-    "    # Submit all of the requests to Harmony\n",
+    "    # Submit all of the test_requests to Harmony\n",
     "    for test_name, test_configs in configuration[\"single_output_tests\"].items():\n",
     "        for shortname, test_config in test_configs.items():\n",
     "            print(f'Submitting Request: {test_name}:{shortname}')\n",
@@ -238,7 +238,7 @@
     "            ext = test_config[\"test_params\"][\"ext\"]\n",
     "            test_job_id = harmony_client.submit(test_request)\n",
     "\n",
-    "            requests.append(\n",
+    "            test_requests.append(\n",
     "                {\n",
     "                    'shortname': shortname,\n",
     "                    'test_name': test_name,\n",
@@ -248,7 +248,7 @@
     "            )\n",
     "\n",
     "    # Verify all of the test results\n",
-    "    for req in requests:\n",
+    "    for req in test_requests:\n",
     "        ext = req['ext']\n",
     "        shortname = req['shortname']\n",
     "        test_name = req['test_name']\n",
